--- a/trunk/parser/parsing-gui/src/application.properties
+++ b/trunk/parser/parsing-gui/src/application.properties
@@ -67,7 +67,7 @@ popup.error.tab=You can't visit this tab unless you have completed
 popup.error.style=You need to select start style(s) or a different document type if you don't have a start style
 popup.editor.msg=Text Editor not found at C:/Windows/notepad.exe, can't open the file.
 popup.info.save=You can't save unless you've entered information in the fields.
-popup.info.saved=The configuration you have entered has been saved for future reference. You can load this configuration later.
+popup.info.saved=The configuration you have entered has been saved for future reference. 
 popup.info.prefix=You need to enter a prefix for creating a marked-up data set.
 popup.info.prefix.save=Your document will be marked up and saved in the following steps with the prefix you have chosen.
 popup.info.type1=You have identified your document type as Type 1.
@@ -121,6 +121,7 @@ tab.seven.name=Step 7
 #tab.eight.name=Glossary
 #tab.character=Character States
 tab.character=Step 6
+tab.term.instruction = <a href="http://sites.google.com/site/biosemanticsproject/character-annotation-discussions/term-categorization-instruction">Full Instruction on Term Categorization</a>
 
 
 #Type 2 - Nomenclature tab
@@ -147,7 +148,8 @@ notepad=C:\\Windows\\notepad.exe
 
 #location for Stanford Jar file
 stanford.parser.jar=lib\\stanford-parser.jar
-englishPCFG =lib\\englishPCFG.ser.gz
+englishPCFG=lib\\englishPCFG.ser.gz
+OTO.dowloadable.dir=/home/sirls/hongcui/WebFilesForTomcat/OTO/downloadFiles/
 
 #labels
 labelSelectProject=Select an empty folder for the project :
@@ -158,6 +160,7 @@ loadPrjLbl=Your last project is loaded. Project Folder:
 datasetLbl=with Dataset Prefix:
 glossaryLbl=and Glossary :
 upload2OTO=Automatically load learned terms to OTO?
+ContainIndexedParts=This document collection contains number-indexed organ parts, such as "rib 5" (meaning the fifth rib)?
 file=File Link
 count=File Count
 #createNew=Create a new project :
@@ -171,10 +174,13 @@ step1DescpPart3= and rerun this step by clicking 'Clear & Rerun'.
 step2DescpPart1=This step verifies the results of step 1. If an error is reported here, correct it by editing the file in ProjectFolder/target/extracted
 step2DescpPart2=. Use 'File Link' to open a file for editing. Rerun this step by clicking on 'Clear & Rerun' repeatedly until no error is reported.
 step3DescpText=This step produces metadata annotation. Use 'File Link' to open a file for review and edit. Save corrected files to ProjectFolder/target/transformed.
-step4Descp=This step produces sentence level annotation and identifies structure names and character descriptors. Use the sub-tabs to review and categorize terms. Save the final categorization by clicking the 'Save' button on the last subtab. \nThe system is currently running the Perl program to extract terms. When it is completed, you will see a message "Done" below.
-step4Descp1=Click on 'Load Task' to start. CharaParser categorized these terms as structure terms. Please review/edit the categorization of the terms. Please treat "ditto" and general living habit and life style terms (e.g., "annuals") as structures. 
-step4Descp2=Click on 'Load Task' to start. CharaParser categorized these terms as character terms. Please review/edit the categorization of the terms. Please note transitive verbs are not characters. 
-step4Descp3=Click on 'Load Task' to start. Please categorize these terms for CharaParser. 
+step4Descp=This step produces sentence level annotation and identifies structure names and character descriptors. Use the sub-tabs to review and categorize terms. Save the final categorization by clicking the 'Save' button on EACH subtab. \n\nClick Run button to run the Perl program to extract terms. When it is completed, you will see a message "Done" in the message box below.
+step4Descp1=Structures = organs/parts (including "midline" of ..., the "connection" between ... ) in noun (e.g., anus) or adjective (e.g., anal) forms, taxon names, pronouns referring to any of the above. 
+step4Descp2=Descriptors = character state terms (including adjectives and intransitive verbs used in this sense). 
+step4Descp3=Neither = Character terms (e.g.,size, proportions), transitive verbs, adverbs, and other terms that doesn't describe a character directly (e.g.,"general", "ditto", "leave" the "freedom" for ...).
+step4Descp1.simple=Click on 'Load Task' to start. CharaParser categorized these terms as structure terms. Please review/edit the categorization of the terms. Please treat "ditto" and general living habit and life style terms (e.g., "annuals") as structures. 
+step4Descp2.simple=Click on 'Load Task' to start. CharaParser categorized these terms as character terms. Please review/edit the categorization of the terms. Please note transitive verbs are not characters. 
+step4Descp3.simple=Click on 'Load Task' to start. Please categorize these terms for CharaParser. 
 step4Descp1.old=Click on 'Load Task' to start. Select all non-structure terms, then click 'Mark as Bad'. Then click 'Mark Others as Good'. Then click 'Save Decisions'. Treat "ditto" and general living habit and life style terms (e.g., annuals) as structure terms.
 step4Descp2.old=Click on 'Load Task' to start. Select all non-descriptor terms, then click 'Mark as Bad'. Then click 'Mark Others as Good'. Then click 'Save Decisions'. Treat verbs as non-descriptors.
 step4Descp3.old=Click on 'Load Task' to start. Select all structure terms, then click 'Mark as Good'. Then click 'Mark Others as Bad'. Then click 'Save Decisions'. Treat "ditto" and general living habit and life style terms (e.g., annuals) as structure terms. 
