Prep 4 Dec workshop

--- a/parsing-gui/src/application.properties
+++ b/parsing-gui/src/application.properties
@@ -1,9 +1,11 @@
 #Database related data
+CharaParser.version=prerelease
 database.name=markedupdatasets
 database.driverPath=com.mysql.jdbc.Driver
 database.url=jdbc:mysql://localhost/markedupdatasets?user=termsuser&password=termspassword
 database.username=termsuser
 database.password=termspassword
+
 
 # Data individual to mark up
 style.mapping=style-mapping.properties
@@ -177,7 +179,7 @@ step3DescpText=This step produces metadata annotation. Use 'File Link' to open a
 step4Descp=This step produces sentence level annotation and identifies structure names and character descriptors. Use the sub-tabs to review and categorize terms. Save the final categorization by clicking the 'Save' button on EACH subtab. \n\nClick Run button to run the Perl program to extract terms. When it is completed, you will see a message "Done" in the message box below.
 step4Descp1=Structures = organs/parts (including "midline" of ..., the "connection" between ... ) in noun (e.g., anus) or adjective (e.g., anal) forms, taxon names, pronouns referring to any of the above. 
 step4Descp2=Descriptors = character state terms (including adjectives and intransitive verbs used in this sense). 
-step4Descp3=Neither = Character terms (e.g.,size, proportions), transitive verbs, adverbs, and other terms that doesn't describe a character directly (e.g.,"general", "ditto", "leave" the "freedom" for ...).
+step4Descp3=Neither = Prepositions, transitive verbs, adverbs, and other terms that doesn't describe a character directly (e.g.,"general", "ditto", "leave" the "freedom" for ...).
 step4Descp1.simple=Click on 'Load Task' to start. CharaParser categorized these terms as structure terms. Please review/edit the categorization of the terms. Please treat "ditto" and general living habit and life style terms (e.g., "annuals") as structures. 
 step4Descp2.simple=Click on 'Load Task' to start. CharaParser categorized these terms as character terms. Please review/edit the categorization of the terms. Please note transitive verbs are not characters. 
 step4Descp3.simple=Click on 'Load Task' to start. Please categorize these terms for CharaParser. 
@@ -188,7 +190,7 @@ step4Descp4.old=Click on 'Load Task' to start. Select all descriptor terms, then
 #step5Descp=This step allows you to load sentences for manual markup. Click on Load Task to start. Select a sentence and then select/enter appropriate modifier and tag for the sentence. Click 'Apply to Checked' to update the sentence table shown. Use "ignore" to tag non-morphological description sentences. 'Save Tagged Sentences' to save your work.    
 step5Descp=This step prepares the system for the next step. Click on Run to start.
 step6DescpText=Here are the terms whose category is unknown to the parser. They are presented to you by group. Please go through these groups one by one to give them a good category label. You may remove terms from a group by clicking the "x" next to a term.  
-step7DescpText=This step outputs final annotated files. Use 'File Link' to open a file for review and edit. Save correct files to ProjectFolder/target/final.
+step7DescpText=This step outputs final annotated files. Use 'File Link' to open a file for review and edit. Save corrected files to ProjectFolder/target/final.
 
 #buttons and tool tips
 #config=Configuration Directory
@@ -234,7 +236,7 @@ sentCurationLoadTTT=Load or reload the list of terms to curate
 Apply2Checked=Apply to Checked
 Apply2CheckedTTT=Apply tag/modifier to the checked sentence
 SaveCategoryBtn=Save
-SaveCategoryTTT=Save category/label for this group
+SaveCategoryTTT=Save category for this group
 step7LoadBtn=Load Previous Results
 step7LoadTTT=Load results from the last run on this collection
 step1LoadBtn=Load Previous Results
