--- a/trunk/parser/parsing-gui/src/application.properties
+++ b/trunk/parser/parsing-gui/src/application.properties
@@ -162,7 +162,7 @@ loadPrjLbl=Your last project is loaded. Project Folder:
 datasetLbl=with Dataset Prefix:
 glossaryLbl=and Glossary :
 upload2OTO=Automatically load learned terms to OTO?
-ContainIndexedParts=This document collection contains number-indexed organ parts, such as "rib 5" (meaning the fifth rib)?
+ContainIndexedParts=This document collection contains number-indexed organ parts, such as "rib 5" (meaning the fifth rib and not 5 ribs)?
 file=File Link
 count=File Count
 #createNew=Create a new project :
