Prep for Dec workshop

--- a/parsing-gui/src/application.properties
+++ b/parsing-gui/src/application.properties
@@ -162,7 +162,8 @@ loadPrjLbl=Your last project is loaded. Project Folder:
 datasetLbl=with Dataset Prefix:
 glossaryLbl=and Glossary :
 upload2OTO=Automatically load learned terms to OTO?
-ContainIndexedParts=This document collection contains number-indexed organ parts, such as "rib 5" (meaning the fifth rib and not 5 ribs)?
+ContainIndexedParts1=This document collection contains number-indexed organ parts, 
+ContainIndexedParts2=such as "rib 5" (meaning the fifth rib and not 5 ribs).
 file=File Link
 count=File Count
 #createNew=Create a new project :
