--- a/trunk/parser/parsing-gui/src/application.properties
+++ b/trunk/parser/parsing-gui/src/application.properties
@@ -161,7 +161,9 @@ stepsTobeCompletedLbl=Steps to be completed :
 loadPrjLbl=Your last project is loaded. Project Folder:
 datasetLbl=with Dataset Prefix:
 glossaryLbl=and Glossary :
-upload2OTO=Automatically load learned terms to OTO?
+upload2OTO=Automatically load learned terms to OTO.
+generateMatrix=Generate taxon-character matrix with parsed descriptions.
+ContainIndexedParts=This document collection contains number-indexed organ parts, such as "rib 5" (meaning the fifth rib and not 5 ribs).
 ContainIndexedParts1=This document collection contains number-indexed organ parts, 
 ContainIndexedParts2=such as "rib 5" (meaning the fifth rib and not 5 ribs).
 file=File Link
