--- a/trunk/parser/parsing-gui/src/application.properties
+++ b/trunk/parser/parsing-gui/src/application.properties
@@ -85,7 +85,9 @@ able to put the removed terms back to their original co-occurrence position in t
 you can continue grouping the terms. \n\nDo you want to continue?
 popup.char.cont=A few terms are still not placed in any group. If you decide to continue, a new group \
 with those terms will be generated. Do you like to group them now?
-popup.char.uploadterms2OTO=structure and descriptor terms have been uploaded to OTO web interface for review. \nYou may move on to the next step now, or resume the process after the terms are reviewed on OTO.
+popup.char.uploadterms2OTO= terms have been uploaded to OTO web interface for review. \nYou may move on to the next step now, or resume the process after the terms are reviewed on OTO.
+popup.char.uploadterms2OTOSad= No terms have been uploaded to OTO. Please try again or report the problem. 
+
 popup.char.missing=There are terms not categorized \nClick Yes if you'd like to save categorized terms and move on.\nClick No if you'd like to fill the blanks.
 popup.warning.copyfiles=Files with the same names are found in Characters and Descriptions folders. \nCopying files from Characters folder to Descriptions folder is not performed
 
