--- a/trunk/parser/parsing-gui/src/application.properties
+++ b/trunk/parser/parsing-gui/src/application.properties
@@ -90,7 +90,7 @@ popup.char.uploadterms2OTOSad= No terms have been uploaded to OTO. Please try ag
 
 popup.char.missing=There are terms not categorized \nClick Yes if you'd like to save categorized terms and move on.\nClick No if you'd like to fill the blanks.
 popup.warning.copyfiles=Files with the same names are found in Characters and Descriptions folders. \nCopying files from Characters folder to Descriptions folder is not performed
-
+popup.warning.prefix=The prefix should be in lower case, should not include ".", and cannot end with "-" or "_". Please enter a good prefix then save the project configuration.
 #names
 application.name=CharaParser for Organism Morphological Descriptions
 application.instructions=Start from General, go through each tab (i.e. step) to complete the parsing process of a volume of\r\nFNA. \
@@ -157,7 +157,7 @@ OTO.dowloadable.dir=/home/sirls/hongcui/WebFilesForTomcat/OTO/downloadFiles/
 
 #labels
 labelSelectProject=Select an empty folder for the project :
-datasetprefix=Choose data set prefix and select a glossary :
+datasetprefix=Choose data set prefix and select a glossary (the prefix should be in lower case, should not include ".", and cannot end with "-" or "_"):
 stepsComplete= All steps are completed.
 stepsTobeCompletedLbl=Steps to be completed :
 loadPrjLbl=Your last project is loaded. Project Folder:
