updated prefix requirements

--- a/parsing-gui/src/application.properties
+++ b/parsing-gui/src/application.properties
@@ -67,7 +67,7 @@ popup.error.info=You can't proceed further unless you've entered information in 
 popup.error.msg=The Application encountered an internal error while processing your request.
 popup.error.tab=You can't visit this tab unless you have completed 
 popup.error.style=You need to select start style(s) or a different document type if you don't have a start style
-popup.editor.msg=Text Editor not found at C:/Windows/notepad.exe, can't open the file.
+popup.editor.msg=Text Editor not found at C:/WinXP/notepad.exe, can't open the file.
 popup.info.save=You can't save unless you've entered information in the fields.
 popup.info.saved=The configuration you have entered has been saved for future reference. 
 popup.info.prefix=You need to enter a prefix for creating a marked-up data set.
@@ -148,7 +148,7 @@ Service/Fungus.asmx/NameSearch?AnywhereInText=false&MaxNumber=100&SearchText=
 Geonames=http://ws.geonames.org/search?style=full&name_equals=
 FallingRain=http://www.fallingrain.com/world/a/
 #notepad path
-notepad=C:\\Windows\\notepad.exe
+notepad=C:\\WinXP\\notepad.exe
 
 #location for Stanford Jar file
 stanford.parser.jar=lib\\stanford-parser.jar
@@ -157,7 +157,7 @@ OTO.dowloadable.dir=/home/sirls/hongcui/WebFilesForTomcat/OTO/downloadFiles/
 
 #labels
 labelSelectProject=Select an empty folder for the project :
-datasetprefix=Choose data set prefix and select a glossary (the prefix should be in lower case, should not include ".", and cannot end with "-" or "_"):
+datasetprefix=Choose data set prefix and select a glossary (the prefix should be in lower case, should not include "." or "-", and cannot end with "_"):
 stepsComplete= All steps are completed.
 stepsTobeCompletedLbl=Steps to be completed :
 loadPrjLbl=Your last project is loaded. Project Folder:
