--- a/parsing-gui/treatiseproject.conf
+++ b/parsing-gui/treatiseproject.conf
@@ -1,4 +1,4 @@
-C:\Users\prasad\tREATISE\conf\
-C:\Users\prasad\tREATISE\source\
-C:\Users\prasad\tREATISE\target\
-C:\Users\prasad\tREATISE\
+E:\Data\Diatom\conf\
+E:\Data\Diatom\source\
+E:\Data\Diatom\target\
+E:\Data\Diatom\
