--- a/trunk/parser/parsing-gui/bin/log4j.properties
+++ b/trunk/parser/parsing-gui/bin/log4j.properties
@@ -1,7 +1,6 @@
 #Default log level to ERROR. Other levels are INFO and DEBUG.
 log4j.rootLogger=debug, ROOT
 log4j.appender.ROOT=org.apache.log4j.RollingFileAppender
-log4j.appender.ROOT.File=D:\\SMART RA\\Work Folders\\Source\\Logs\\markup.log
 log4j.appender.ROOT.MaxFileSize=1000KB
 #Keep 10 old files around.
 log4j.appender.ROOT.MaxBackupIndex=10
@@ -11,3 +10,6 @@ log4j.appender.ROOT.layout.ConversionPattern=[%d] %t %c %-5p - %m%n
 
 #Optionally override log level of individual packages or classes
 #log4j.logger.com.webage.ejbs=INFO
+
+
+log4j.appender.ROOT.File=.\\Logs\\markup.log
