Added "TAXONNAMES" and "TYPOS" properties.

--- a/parsing-gui/src/application.properties
+++ b/parsing-gui/src/application.properties
@@ -33,6 +33,8 @@ UNKNOWNWORDS=unknownwords
 ALLWORDS=allwords
 HEURISTICNOUNS=heuristicnouns
 SENTENCETABLE=sentence
+TAXONNAMES=taxonnames
+TYPOS=typos
 STRUCTURECATEGORIESINGLOSSARY='STRUCTURE', 'FEATURE', 'SUBSTANCE', 'PLANT', 'nominative', 'life_style'
 STRUCTURECATEGORYPATTERNINGLOSSARY=STRUCTURE|FEATURE|SUBSTANCE|PLANT|nominative|structure|life_style
 
@@ -67,7 +69,7 @@ popup.error.info=You can't proceed further unless you've entered information in 
 popup.error.msg=The Application encountered an internal error while processing your request.
 popup.error.tab=You can't visit this tab unless you have completed 
 popup.error.style=You need to select start style(s) or a different document type if you don't have a start style
-popup.editor.msg=Text Editor not found at C:/WinXP/notepad.exe, can't open the file.
+popup.editor.msg=Text Editor not found, can't open the file. Correct the filepath specified in notepad.properties.
 popup.info.save=You can't save unless you've entered information in the fields.
 popup.info.saved=The configuration you have entered has been saved for future reference. 
 popup.info.prefix=You need to enter a prefix for creating a marked-up data set.
@@ -147,8 +149,6 @@ Index-Fungorum=http://www.indexfungorum.org/IXFWeb\
 Service/Fungus.asmx/NameSearch?AnywhereInText=false&MaxNumber=100&SearchText=
 Geonames=http://ws.geonames.org/search?style=full&name_equals=
 FallingRain=http://www.fallingrain.com/world/a/
-#notepad path
-notepad=C:\\WinXP\\notepad.exe
 
 #location for Stanford Jar file
 stanford.parser.jar=lib\\stanford-parser.jar
