Set autoReconnect = true

--- a/parsing-gui/src/application.properties
+++ b/parsing-gui/src/application.properties
@@ -2,7 +2,7 @@
 CharaParser.version=prerelease
 database.name=markedupdatasets
 database.driverPath=com.mysql.jdbc.Driver
-database.url=jdbc:mysql://localhost/markedupdatasets?user=termsuser&password=termspassword
+database.url=jdbc:mysql://localhost/markedupdatasets?user=termsuser&password=termspassword&connectTimeout=0&socketTimeout=0&autoReconnect=true
 database.username=termsuser
 database.password=termspassword
 
