--- a/trunk/parser/parsing-gui/.classpath
+++ b/trunk/parser/parsing-gui/.classpath
@@ -6,22 +6,8 @@
 	<classpathentry exported="true" kind="lib" path="lib/jaxen-jdom.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jdom.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/mysql-connector-java-5.0.8-bin.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/org.eclipse.core.commands_3.5.0.I20090525-2000.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/org.eclipse.core.runtime_3.5.0.v20090525.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/org.eclipse.equinox.common_3.5.0.v20090520-1800.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/org.eclipse.equinox.registry_3.4.100.v20090520-1800.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/org.eclipse.jface_3.5.0.I20090525-2000.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/org.eclipse.jface.text_3.5.0.v20090602.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/org.eclipse.osgi_3.5.0.v20090520.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/org.eclipse.swt.win32.win32.x86_3.5.0.v3550b.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/org.eclipse.text_3.5.0.v20090513-2000.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/org.eclipse.ui.forms_3.4.0.v20090526.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/org.eclipse.ui.workbench_3.5.0.I20090603-2000.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/saxpath.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/log4j-1.2.15.jar"/>
-	<classpathentry exported="true" kind="lib" path="swt-grouplayout.jar"/>
-	<classpathentry exported="true" kind="lib" path="baseline.jar"/>
-	<classpathentry exported="true" kind="lib" path="formattedtext-1.0.0.jar" sourcepath="formattedtext-1.0.0-src.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/ant.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/lucene-1.4.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-lang-2.5.jar"/>
@@ -49,11 +35,18 @@
 	<classpathentry exported="true" kind="lib" path="lib/wstx-asl-3.2.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/stanford-parser.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/prefuse.jar"/>
-	<classpathentry exported="true" kind="lib" path="radiogroup-0.1.0.jar" sourcepath="radiogroup-0.1.0-src.zip"/>
 	<classpathentry exported="true" kind="con" path="org.dyno.visual.swing.VS_LIBRARY/layoutext"/>
 	<classpathentry kind="lib" path="lib/jsoup-1.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/jsch-0.1.48.jar"/>
 	<classpathentry kind="lib" path="lib/jdom-2.0.3/jdom-2.0.3.jar"/>
 	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/eclipse/plugins/org.eclipse.swt_3.100.1.v4234e.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.jface_3.5.0.I20090525-2000.jar"/>
+	<classpathentry kind="lib" path="lib64bits/org.eclipse.swt.win32.win32.x86_64_3.100.1.v4234e.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.ui.workbench_3.5.0.I20090603-2000.jar"/>
+	<classpathentry kind="lib" path="lib/radiogroup-0.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/baseline.jar"/>
+	<classpathentry kind="lib" path="lib/formattedtext-1.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/swt-grouplayout.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
