--- a/trunk/parser/parsing-gui/taxonproject.conf
+++ b/trunk/parser/parsing-gui/taxonproject.conf
@@ -1,4 +1,4 @@
-C:\Users\mohankrishna89\Desktop\Ant Work\Plazi_8405_tx\conf\
-C:\Users\mohankrishna89\Desktop\Ant Work\Plazi_8405_tx\source\
-C:\Users\mohankrishna89\Desktop\Ant Work\Plazi_8405_tx\target\
-C:\Users\mohankrishna89\Desktop\Ant Work\Plazi_8405_tx\
+C:\Users\updates\CharaParserTest\2012BiosemanticsWorkshopTest\DonatAnts\conf\
+C:\Users\updates\CharaParserTest\2012BiosemanticsWorkshopTest\DonatAnts\source\
+C:\Users\updates\CharaParserTest\2012BiosemanticsWorkshopTest\DonatAnts\target\
+C:\Users\updates\CharaParserTest\2012BiosemanticsWorkshopTest\DonatAnts\
