--- a/trunk/parser/parsing-gui/treatiseproject.conf
+++ b/trunk/parser/parsing-gui/treatiseproject.conf
@@ -1,4 +1,4 @@
-E:\Data\Diatom\conf\
-E:\Data\Diatom\source\
-E:\Data\Diatom\target\
-E:\Data\Diatom\
+C:\Users\updates\CharaParserTest\2012BiosemanticsWorkshopTest\FNAv5Caryophyllaceae\conf\
+C:\Users\updates\CharaParserTest\2012BiosemanticsWorkshopTest\FNAv5Caryophyllaceae\source\
+C:\Users\updates\CharaParserTest\2012BiosemanticsWorkshopTest\FNAv5Caryophyllaceae\target\
+C:\Users\updates\CharaParserTest\2012BiosemanticsWorkshopTest\FNAv5Caryophyllaceae\
