--- a/parsing-gui/src/application.properties
+++ b/parsing-gui/src/application.properties
@@ -34,6 +34,7 @@ ALLWORDS=allwords
 HEURISTICNOUNS=heuristicnouns
 SENTENCETABLE=sentence
 TAXONNAMES=taxonnames
+SINGULARPLURAL=singularplural
 TYPOS=typos
 STRUCTURECATEGORIESINGLOSSARY='STRUCTURE', 'FEATURE', 'SUBSTANCE', 'PLANT', 'nominative', 'life_style'
 STRUCTURECATEGORYPATTERNINGLOSSARY=STRUCTURE|FEATURE|SUBSTANCE|PLANT|nominative|structure|life_style
