synchronize with repo

--- a/parsing-gui/fnaproject.conf
+++ b/parsing-gui/fnaproject.conf
@@ -1,4 +1,4 @@
-C:\Users\mohankrishnag\Desktop\Work\DEMO\demo-folders\FNA-v19-excerpt\conf\
-C:\Users\mohankrishnag\Desktop\Work\DEMO\demo-folders\FNA-v19-excerpt\source\
-C:\Users\mohankrishnag\Desktop\Work\DEMO\demo-folders\FNA-v19-excerpt\target\
-C:\Users\mohankrishnag\Desktop\Work\DEMO\demo-folders\FNA-v19-excerpt\
+E:\Data\FNAv5Caryophyllaceae\conf\
+E:\Data\FNAv5Caryophyllaceae\source\
+E:\Data\FNAv5Caryophyllaceae\target\
+E:\Data\FNAv5Caryophyllaceae\
