--- a/parsing-gui/taxonproject.conf
+++ b/parsing-gui/taxonproject.conf
@@ -1,4 +1,4 @@
-C:\Users\updates\CharaParserTest\2012BiosemanticsWorkshopTest\DonatAnts\conf\
-C:\Users\updates\CharaParserTest\2012BiosemanticsWorkshopTest\DonatAnts\source\
-C:\Users\updates\CharaParserTest\2012BiosemanticsWorkshopTest\DonatAnts\target\
-C:\Users\updates\CharaParserTest\2012BiosemanticsWorkshopTest\DonatAnts\
+G:\2012BiosemanticsWorkshopTest\DonatAnts\conf\
+G:\2012BiosemanticsWorkshopTest\DonatAnts\source\
+G:\2012BiosemanticsWorkshopTest\DonatAnts\target\
+G:\2012BiosemanticsWorkshopTest\DonatAnts\=======
