remove Logs, fnaproject.conf, taxonproject.conf, and application.properties from the repo

--- a/parsing-gui/src/application.properties.template
+++ b/parsing-gui/src/application.properties.template
@@ -25,6 +25,10 @@ server.name=biosemantics.arizona.edu
 #charaparser version
 CharaParser.version=prerelease
 
+#charaparser running mode
+charaparser.finalize=true
+charaparser.standalone=false
+
 # Data individual to mark up
 style.mapping=style-mapping.properties
 MARKEDUP=markedup
