--- a/parsing-gui/.classpath
+++ b/parsing-gui/.classpath
@@ -10,7 +10,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/log4j-1.2.15.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/ant.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/lucene-1.4.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/commons-lang-2.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/Gamta.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/HtmlXmlUtil.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/StringUtils.jar"/>
@@ -49,5 +48,6 @@
 	<classpathentry kind="lib" path="lib/formattedtext-1.0.0.jar"/>
 	<classpathentry kind="lib" path="lib/swt-grouplayout.jar"/>
 	<classpathentry kind="lib" path="lib/owlapi-bin.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang3-3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
