--- a/trunk/parser/parsing-gui/src/application.properties.template
+++ b/trunk/parser/parsing-gui/src/application.properties.template
@@ -150,6 +150,11 @@ tab.three.name=Step 2
 tab.four.name=Step 3
 #tab.five.name=MarkUp && Correction
 tab.five.name=Step 4
+tab.five.perl.title=Run Perl Program
+tab.five.perl.name=Step 4.perl
+tab.five.one.name=Step 4.1
+tab.five.two.name=Step 4.2
+tab.five.three.name=Step 4.3
 #tab.six.name="unknown" Removal
 tab.six.name=Step 5
 #tab.seven.name=Finalizer
